# ramulator2

python/ramulator/frontend/: __init__.py  sst.py
src/: base  controller  dram  frontend  memory_system  python  test_frontend.cpp  translation
src/ramulator/dram/impl/: DDR3.cpp  DDR4.cpp  DDR4_VRR.cpp  DDR5.cpp  DDR5_RFM.cpp  DDR5_RFM_VRR.cpp  DDR5_VRR.cpp  GDDR6.cpp  GDDR7.cpp  HBM1.cpp  HBM2.cpp  HBM3.cpp  HBM4.cpp  LPDDR5.cpp  LPDDR6.cpp
src/ramulator/frontend/: CMakeLists.txt  frontend.h  i_frontend.h
src/ramulator/frontend/impl/external_wrapper/: sst_frontend.cpp
